<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paginas_root" android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">
    <com.example.rastro.PaginasPrincipais android:id="@+id/paginas"
        android:layout_width="match_parent" android:layout_height="match_parent"/>
    <include layout="@layout/layout_bottom_nav"
        android:layout_width="154dp" android:layout_height="58dp"
        android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="24dp"/>
</FrameLayout>
